--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -63,7 +63,7 @@
 %\include{rbffd_avoid_pole_singularities}
 %\include{rbffd_weights_on_sphere}
 \include{cut_from_distributed_solver}
-%\include{keeneland_benchmarks}
+\include{keeneland_benchmarks}
 %\include{spear_benchmarks}
 %\include{hardware}
 
