--- a/latex/keeneland_benchmarks.tex
+++ b/latex/keeneland_benchmarks.tex
@@ -8,7 +8,7 @@ This appendix provides new data from Keeneland, a supercomputing cluster designe
 \begin{figure}
 \centering
 \includegraphics[width=0.5\textwidth]{../figures/omnigraffle/Keeneland.pdf}
-\caption{The Keeneland Initial Delivery System (KIDS), a multi-GPU cluster with 360 GPUs and 240 CPUs capable of 201 TFLOP/sec.}
+\caption{The Keeneland Initial Delivery System (KIDS), a multi-GPU cluster with 360 GPUs and 240 CPUs capable of 201 TFLOP/sec. Each of the six-core Xeon chips has HyperThreading (HT) enabled for two software threads per core.}
 \label{fig:keeneland}
 \end{figure}
 
